compiler/testData/diagnostics/tests/multiplatform/checkNoActualForExpectInLastModule.fir.kt
// ISSUE: KT-58483
// MODULE: jvm
// FILE: jvm.kt
<!NO_ACTUAL_FOR_EXPECT{JVM}!>expect class A<!>
